# Demos

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cc  utils.cpp  utils.h
app/src/main/cpp/ffmpeg-7.0/: build.sh  build2.sh  config.h  config_components.h
app/src/main/cpp/ffmpeg-7.0/doc/: config.texi
app/src/main/cpp/ffmpeg-7.0/ffbuild/: config.fate  config.mak  config.sh
app/src/main/cpp/ffmpeg-7.0/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_common.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_common.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aasc.d  ac3_parser.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adts_header.d  adts_parser.d  adx.d  (+713 more)
app/src/main/cpp/ffmpeg-7.0/libavdevice/: android_camera.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  libavdevice.pc  timefilter.d  v4l2-common.d  v4l2.d  v4l2enc.d
app/src/main/cpp/ffmpeg-7.0/libavfilter/: aeval.d  af_aap.d  af_acontrast.d  af_acopy.d  af_acrossover.d  af_acrusher.d  af_adeclick.d  af_adecorrelate.d  af_adelay.d  af_adenorm.d  af_aderivative.d  af_adrc.d  af_adynamicequalizer.d  af_adynamicsmooth.d  af_aecho.d  af_aemphasis.d  af_aexciter.d  af_afade.d  af_afftdn.d  af_afftfilt.d  (+336 more)
app/src/main/cpp/lame-3.100/: Makefile  build.sh  config.h  config.status  libtool
(+843 files in other folders)
